add h1 and paragraph elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Akan name detector</title>
 </head>
 <body>
-    
+  <h1>Akan name detector</h1> 
+  <p>This is  a web application built to take a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. Akan names originate from Ghana where children are named after days of the week they were born.</p> 
 </body>
 </html>
