add css style elements

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akan name detector</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <h1>Akan name detector</h1> 
-  <p>This is  a web application built to take a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. Akan names originate from Ghana where children are named after days of the week they were born.</p> 
+  <p>This is  a web application built to take your birthday and calculate the day of the week that you were born and then depending on your gender outputs your Akan Name. Akan names originate from Ghana where children are named after days of the week they are born.</p> 
 </body>
 </html>
