--- a/index.html
+++ b/index.html
@@ -6,21 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akan name detector</title>
     <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <header>
-    <h1>Akan Name Detector</h1>
-    <div class="image">
-        <img src="images/images.png" alt="">
-    </div>
-  </header>
-  <main>
-      <div class="main">
-        <p>This is  a web application built to take your birthday and calculate the day of the week that you were born and then depending on your gender outputs your Akan Name. Akan names originate from Ghana where children are named after days of the week they are born.</p> 
-      </div>
-    
-  </main>
-      
-   
+    <link rel="text/javascript" href="/js/main.js">
+
+
 </body>
 </html>
