add css styling for year of birth label

--- a/index.html
+++ b/index.html
@@ -14,5 +14,27 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet"> 
 
+ <!-- Font awesome icon link -->
+
+ <script src="https://kit.fontawesome.com/e7ac757956.js" crossorigin="anonymous"></script>
+
+</head>
+<body>
+    <header>
+       <h1>Akan Name Generator</h1>
+            <div class="image">
+               <img src="images/images.png" alt="">
+            </div>
+    </header>
+    <main>
+    <p>This is  a web application built to take your birthday and calculate the day of the week that you were born and then depending
+          on your gender outputs your Akan Name. Akan names originate from Ghana where children are named after days of the week they
+           are born.</p>
+
+         <hr>
+    </main>     
+    <div class="main">
+
+      
 </body>
 </html>
