add css styling month of birth label

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     </main>     
     <div class="main">
 
+      <h3>Input Birthday</h3>
+
+
+      <label for="Year">Year of birth:</label>
+      <input type="integer" id="year" name="year of birth" placeholder="Eg: 1999">
       
 </body>
 </html>
