add css styling for date of birth label

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
       <label for="Year">Year of birth:</label>
       <input type="integer" id="year" name="year of birth" placeholder="Eg: 1999">
-      
+      <label for="Month">Month of birth:</label>
+      <input type="integer" id="month" name="month of birth" placeholder="Eg. October">
 </body>
 </html>
