--- a/index.html
+++ b/index.html
@@ -42,5 +42,9 @@
       <input type="integer" id="year" name="year of birth" placeholder="Eg: 1999">
       <label for="Month">Month of birth:</label>
       <input type="integer" id="month" name="month of birth" placeholder="Eg. October">
+      <label for="Date">Date of birth:</label>
+      <input type="integer" id="date" name="date of birth" placeholder="Eg: 11th">
+
+      
 </body>
 </html>
