add html input type female

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
       <label for="Date">Date of birth:</label>
       <input type="integer" id="date" name="date of birth" placeholder="Eg: 11th">
 
-      
+      <h3>Input Gender</h3>
+
+           <input type="radio" name="gender" id="male" placeholder="male">
+           <label for="male">Male</label><br>
+           
 </body>
 </html>
