add html input style submit value

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 
            <input type="radio" name="gender" id="male" placeholder="male">
            <label for="male">Male</label><br>
+
+           <input type="radio" name="gender" id="female" placeholder="female">
+           <label for="female">Female</label><br>
            
 </body>
 </html>
