--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
 
            <input type="radio" name="gender" id="female" placeholder="female">
            <label for="female">Female</label><br>
-           
+
+           <input type="submit" value="Submit">
+
+           <footer>
+            <i class="fa-brands fa-linkedin"></i>
+          
 </body>
 </html>
