add css styles margin and padding

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
                <img src="images/images.png" alt="">
             </div>
     </header>
-    <main>
+    <hr>
+    <div class="explainer">
     <p>This is  a web application built to take your birthday and calculate the day of the week that you were born and then depending
           on your gender outputs your Akan Name. Akan names originate from Ghana where children are named after days of the week they
            are born.</p>
+          </div>
 
          <hr>
-    </main>     
+        
     <div class="main">
 
       <h3>Input Birthday</h3>
@@ -54,9 +56,10 @@
            <label for="female">Female</label><br>
 
            <input type="submit" value="Submit">
+    </div>
 
            <footer>
             <i class="fa-brands fa-linkedin"></i>
-          
+          </footer>
 </body>
 </html>
