add javascript folder and file

--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
 
 
       <label for="Year">Year of birth:</label>
-      <input type="integer" id="year" name="year of birth" placeholder="Eg: 1999">
+      <input type="number" id="year" name="year_of_birth" placeholder="Eg: 1999">
       <label for="Month">Month of birth:</label>
-      <input type="integer" id="month" name="month of birth" placeholder="Eg. October">
+      <input type="number" id="month" name="month_of_birth" placeholder="Eg. October">
       <label for="Date">Date of birth:</label>
-      <input type="integer" id="date" name="date of birth" placeholder="Eg: 11th">
+      <input type="number" id="date" name="date_of_birth" placeholder="Eg: 11th">
 
       <h3>Input Gender</h3>
 
+
            <input type="radio" name="gender" id="male" placeholder="male">
-           <label for="male">Male</label><br>
+           <label for="male">Male</label>
 
            <input type="radio" name="gender" id="female" placeholder="female">
-           <label for="female">Female</label><br>
+           <label for="female">Female</label>
+           <br>
 
            <input type="submit" value="Submit">
     </div>
