add link to linkedin icon

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
     </div>
 
            <footer>
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-linkedin" style="font-size: 40px;color:darkblue;"></i>
+            <i class="material-icons">Linkedin</i>
+           <p> <a href="https://www.Linkedin.com/in/norah-waswala-84146b145" target="_blank" > <em>www.Linkedin.com/in/norah-waswala-84146b145</em> </a></p>
           </footer>
+      
+          <script src="main.js"></script>
 </body>
 </html>
